alignment issues rectified

--- a/gabble/src/App.css
+++ b/gabble/src/App.css
@@ -3,3 +3,6 @@ body{
   font-size: 1.3rem;
   
 }
+a{
+ text-decoration: none;
+color: black;}
