--- a/gabble/src/Components/Gab/maingab.css
+++ b/gabble/src/Components/Gab/maingab.css
@@ -19,7 +19,12 @@
     margin-left: 4%;
 }
 .posts{
-    width: 70%;
+    width: 60%;
+    margin-top:2%;
+   
+}
+.posts1{
+    width: 85%;
     margin-top:2%;
    
 }
