--- a/gabble/src/Components/Gab/post.css
+++ b/gabble/src/Components/Gab/post.css
@@ -1,12 +1,12 @@
-.menus{
+/* .menus{
     margin-top: 10%;
     width:20%;
-    margin-left:10%;
+    margin-left:5%;
     margin-right:6%;
     
     
    
-}
+} */
 .flexes{
     display: flex;
     justify-content: space-evenly;
@@ -21,15 +21,14 @@
     border: 2px black solid;
     margin-top: 8%;
     
-    width: 500px;
+    /* width: 500px; */
 
 }
 
 .newgab{
-        width:80%;
+        width:70%;
         
-        margin-right:95%;
-        display:inline-flexbox;
+        
         
         
     
@@ -45,7 +44,7 @@
     margin-top: 4%;
     
     height:150px;
-    width: 500px;
+    /* width: 500px; */
 
 }
 
@@ -59,9 +58,10 @@
     padding-right: 4%;
     font-size:1.5rem;
     border-radius: 15px;
-    margin-left: 120%;
+    /* margin-left: 120%; */
     margin-top: 6%;
     cursor: pointer;
+    float: left;
     
 }
 
